--- a/public/less/style.less
+++ b/public/less/style.less
@@ -37,6 +37,138 @@
 	}	
 }
 
+.featured-topics-4x1 {
+	.category-item {
+		padding-left: 8px !important;
+		padding-right: 8px !important;
+
+		.select {
+			line-height:55px;
+		}
+
+		.category-icon {
+			-webkit-box-shadow: 0 1px 10px rgba(0, 0, 0, 0.15);
+			-moz-box-shadow: 0 1px 10px rgba(0, 0, 0, 0.15);
+			box-shadow: 0 1px 10px rgba(0, 0, 0, 0.15);
+		}
+
+		.category-header {
+			text-align: center;
+			padding: 30px;
+			min-height:115px;
+
+
+			.badge {
+				background: none;
+				position: absolute;
+				top: 90px;
+				right: 10px;
+				span, i {
+					opacity: 0.8;
+				}
+			}
+		}
+
+		.category-box {
+			position: relative;
+			background: #fff;
+
+			@media (min-width: @screen-md-min) {
+
+			}
+
+			min-height: 30px;
+			margin-top: -10px;
+
+			.category-info {
+				background: #f7f7f7;
+				padding:10px;
+				border-bottom: 1px solid #e9e9e9;
+
+				h4 {
+					font-weight: bold;
+					margin-top: 0px;
+					margin-bottom: 5px;
+				}
+			}
+
+			.post-preview {
+				padding:10px;
+			}
+		}
+
+		.category-box:after, .category-box:before {
+			bottom: 100%;
+			left: 10%;
+			border: solid transparent;
+			content: " ";
+			height: 0;
+			width: 0;
+			position: absolute;
+			pointer-events: none;
+		}
+		.category-box:after {
+			border-color: rgba(140, 113, 242, 0);
+			border-bottom-color: #f7f7f7;
+			border-width: 10px;
+			margin-left: -10px;
+		}
+		.category-box:before {
+			border-color: rgba(122, 98, 211, 0);
+
+			border-width: 12px;
+			margin-left: -12px;
+		}
+
+		.post-preview {
+			padding-top: 10px;
+			border-bottom: 1px dashed #dedede;
+			word-break: break-word;
+
+			&:last-child {
+				border-bottom: none;
+			}
+
+			img {
+				display: block;
+				max-width: 100%;
+				height: auto;
+			}
+
+			.user-img {
+				width: 24px;
+				height: 24px;
+				margin-right: 5px;
+				border-radius: 50%;
+			}
+
+			hr {
+				margin-bottom: 10px;
+				margin-top: 5px;
+			}
+
+			.post-preview-content {
+
+				max-height: 250px;
+				overflow: hidden;
+				position: relative;
+
+				p {
+					font-size:14px;
+				}
+
+				blockquote {
+					border-left-width: 3px;
+				}
+			}
+		}
+
+		.teaser-pic, .teaser-pic.user-icon {
+			.user-icon-style(20px, 1.3rem);
+		}
+	}
+}
+
 .badge.topic-badge {
 	background: #36393D;
 	padding: 6px;
